--- a/results.tex
+++ b/results.tex
@@ -307,7 +307,7 @@ Overall Quality & 4.0 & 4.3 & 4.1 & 4.2 \\ \hline
 \subsection{Key Findings}
 
 \begin{enumerate}
-    \item \textbf{Style Fidelity:} All models capture distinctive style characteristics (One Piece outlines, Disney gradients, Ghibli textures, Van Gogh brushstrokes).
+    \item \textbf{Style Fidelity:} Distinctive style characteristics are captured by all models(One Piece outlines, Disney gradients, Ghibli textures, Van Gogh brushstrokes).
 
     \item \textbf{Content Preservation:} Cycle-consistency loss maintains facial structure and identity effectively.
 
@@ -323,7 +323,7 @@ Overall Quality & 4.0 & 4.3 & 4.1 & 4.2 \\ \hline
 
 \subsection{Error Analysis}
 
-Common failure cases include: facial distortion (15\%, extreme poses), color artifacts (10\%, unusual lighting), incomplete style transfer (12\%, complex backgrounds), and over-stylization (8\%, simple inputs). These can be mitigated through improved data diversity, adjusted loss weights, and face region focus
+ failure cases commonly include: facial distortion (15\%, extreme poses), color artifacts (10\%, unusual lighting), incomplete style transfer (12\%, complex backgrounds), and over-stylization (8\%, simple inputs). These can be mitigated through improved data diversity, adjusted loss weights, and face region focus
 
 \section{Summary of Results}
 
@@ -336,5 +336,5 @@ The experimental results demonstrate that our CycleGAN-based neural style transf
     \item Robust performance across diverse input images
 \end{itemize}
 
-The system meets all specified requirements and provides a practical solution for artistic style transfer in animation and painting styles.
+ All specified requirements are met by  the system meets and provides a practical solution for artistic style transfer in animation and painting styles.
 
