--- a/conclusion.tex
+++ b/conclusion.tex
@@ -3,8 +3,7 @@
 This chapter summarizes the achievements of the AI-Based Neural Style Transfer project, discusses the contributions made, and outlines potential directions for future work.
 
 \section{Summary of the Project Work}
-The project titled "AI-Based Neural Style Transfer using CycleGAN" has been successfully designed, implemented, and tested. The system enables the transformation of ordinary photographs into distinctive artistic styles using deep learning techniques.
-\subsection{Achievements}
+The system allows for a completely different look to be applied to ordinary photographs by utilizing deep learning techniques and converting them to a unique artistic style via Artificial Intelligence based CycleGAN neural style transfer method.\subsection{Achievements}
 \textbf{1. Successful Implementation of Four Style Transfer Models:}
 \vspace{-0.4cm}
 \begin{itemize}
@@ -123,6 +122,6 @@ Future enhancements can be categorized into three areas:
     \item Advanced architectures using transformers and diffusion models
 \end{itemize}
 \section{Conclusion}
-The AI-Based Neural Style Transfer project has successfully demonstrated the application of CycleGAN for transforming photographs into distinctive artistic styles. The system effectively captures the visual characteristics of four diverse styles—One Piece anime, Disney animation, Studio Ghibli animation, and Van Gogh painting—while preserving the semantic content of input images.\\
-The project contributes a complete pipeline from dataset creation through frame extraction to model training and inference. The modular architecture allows for easy extension to additional styles, and the optimized implementation achieves real-time performance suitable for practical applications.\\
-The work presented in this report provides a foundation for further research in artistic style transfer and demonstrates the potential of deep learning for creative applications in digital art, entertainment, and social media.\\
+Photograph-to-drawing conversion will give ordinary photos an entirely different appearance. This technology uses deep learning techniques and the CycleGAN neural style transfer process (artificial intelligence-based).\\
+The implementation inspires a complete programmer pipeline, including dataset creation, frame extraction, model training, and inference. Because of the modular structure, it can be easily extended into new styles; and the design optimizes the platform to achieve real-time performance in practice.\\
+Based on the findings in this report, there is clearly much room for continued study and development for both Artistic Style Transfer and Deep Learning as it pertains to creativity, particularly in Digital Art, Entertainment Media, and Social Networking. \\
