--- a/introduction.tex
+++ b/introduction.tex
@@ -1,8 +1,8 @@
 \chapter{Introduction}
 
-The intersection of artificial intelligence and creative arts has opened unprecedented possibilities for digital content creation. Neural Style Transfer (NST) represents one of the most fascinating applications of deep learning, enabling the transformation of ordinary photographs into stunning artistic renditions by learning and applying the visual characteristics of various art styles. This project focuses on developing a comprehensive style transfer system using CycleGAN (Cycle-Consistent Generative Adversarial Networks) to transform images into four distinctive artistic styles: One Piece anime, Disney animation, Studio Ghibli animation, and Van Gogh painting style.\\
+The convergence of artificial intelligence and creative arts has created infinite opportunities for the creation of digital based artwork. One of the most exciting current uses of deep learning is in Neural Style Transfer (NST), which allows you to take a normal photo and create an amazing piece of art from it, by learning what makes a particular style "art" and then applying that same "art" style to create something new with your own image. This project's goal is to design a seamless style transfer system using CycleGAN (Cycle-Consistent Generative Adversarial Networks) to enable the ability to convert images into 4 very unique artistic styles, which include: One Piece anime, Disney animated characters, Studio Ghibli animated characters, and Van Gogh style painting.\\
 The emergence of Generative Adversarial Networks (GANs) in 2014 by Goodfellow et al. \cite{bib:goodfellow2014} marked a paradigm shift in generative modeling. Subsequently, the introduction of CycleGAN by Zhu et al. \cite{bib:cyclegan} revolutionized image-to-image translation by eliminating the requirement for paired training data. This advancement is particularly significant for artistic style transfer, where obtaining perfectly aligned pairs of content and stylized images is impractical.\\
-Our project leverages these advances to create a system capable of transforming human faces into animated character styles and landscapes into painterly renditions. The animation styles (One Piece, Disney, and Studio Ghibli) each possess unique visual characteristics that make them instantly recognizable, while Van Gogh's post-impressionist style is renowned for its distinctive brushwork and vibrant color palette.\\
+This project utilises the characterisation of the above examples to produce an animated human face and to create painting-like landscapes based on this characterisation. Each of these three animation styles (One Piece, Disney, Studio Ghibli) has a unique visual appearance, making it immediately identifiable. The post-impressionist style designed by Vincent Van Gogh is accepted as having a very particular brushstroke and a colour palette that is especially vibrant.\\
 \section{Background}
 \subsection{Evolution of Computer Vision}
 
@@ -10,34 +10,31 @@ Computer vision has transformed dramatically with deep learning. Key milestones 
 
 \subsection{Convolutional Neural Networks}
 
-CNNs learn hierarchical features: early layers detect edges and textures, middle layers combine patterns, and deep layers encode semantic content. This hierarchy enables separation of content from style for neural style transfer. VGG-19 has become the standard feature extractor due to its uniform 3$\times$3 architecture and proven effectiveness for perceptual similarity.
+CNNs learn hierarchThe features learnt by CNNs are Heirarchical. Early layers learn for instance edge and texture information, the middle layers combine patterns, and the deepest layers learn Semantic content. Because of this hierarchical feature extraction, Neural style transfer can separate the Content and Style of an input to create an output image with an alternate style. VGG-19 has emerged as the de facto standard for feature extraction due to its es$33$\tim architecturally uniform layers and its proven effectiveness in establishing perceptual similarity.ical features: early layers detect edges and textures, middle layers combine patterns, and deep layers encode semantic content. This hierarchy enables separation of content from style for neural style transfer. VGG-19 has become the standard feature extractor due to its uniform 3$\times$3 architecture and proven effectiveness for perceptual similarity.
 
 \subsection{Generative Adversarial Networks}
 
-GANs consist of a generator (produces synthetic samples) and discriminator (distinguishes real from fake). Through adversarial training, both improve until the generator produces realistic outputs. Key variants include Conditional GAN, Pix2Pix (paired translation), CycleGAN (unpaired translation), and StyleGAN.
-
+GANs consist of two components: the generator, which is responsible for generating synthetic samples, and the discriminator, which determines whether or not a given sample is considered real or fake. Using adversarial training techniques, both components are trained until the generator produces samples created in a way that they appear realistic to real humans. Some popular variants of GAN include Conditional GAN, Pix2Pix, Cycle GAN, and Style GAN.
 \subsection{Style Transfer Approaches}
 
-Style transfer separates content (objects, semantics) from style (colors, textures, brushstrokes). Three approaches exist: optimization-based (slow, flexible), feed-forward (fast, style-specific), and GAN-based (versatile, high quality). Our project uses CycleGAN for unpaired training capability
-
+GANs comprise two essential elements: a Generator responsible for the creation of synthetic samples, and a Discriminator which judges if a particular sample is classified as real or fake. By using the principles of adversarial training, both components were trained until the generator produces synthetically produced samples in such a manner that they look "real" to the human eye. Examples of several types of GANs include cGANs (Conditional GANs), Pix2Pix, CycleGANs and StyleGANs.
 \section{Motivation}
 The motivation for this project stems from several converging factors in technology, art, and social media culture:\\
 \textbf{1. Growing Demand for Personalized Digital Art:}\\
-Social media platforms have created an unprecedented demand for unique, personalized visual content. Users seek creative ways to transform their photographs into artistic representations, driving the popularity of photo filter applications and artistic transformation tools. A system capable of producing high-quality anime-style or painterly transformations addresses this growing market need.\\
+The popularity of photo filter apps and personalized artistic transformation utilities are driven by the need for users to create artistically altered versions of their own images in creative ways. There is a large market demand for systems that can provide high-quality anime or painterly transformations of photographs to fulfill this need.\\
 \textbf{2. Bridging Art and Technology:}\\
-Traditional artistic transformation requires years of training and innate artistic ability. Neural style transfer democratizes art creation by allowing anyone to generate stylized images that capture the essence of renowned artists or animation studios. This bridges the gap between artistic appreciation and creation.\\
+It normally takes a lot of time and training to develop your artistic skills through traditional means, but thanks to neural style transfer, you do not need either of those to create art. With neural style transfer, anyone can create photo-based artwork that captures the essence of famous artists or animation studios. As a result, neural style transfer has made it easier than ever for people to appreciate and create art.\\
 \textbf{3. Advances in Deep Learning:}\\
-Recent advances in deep learning, particularly in GANs and image-to-image translation, have made it possible to generate photorealistic images and perform complex style transformations. The availability of powerful GPU computing and open-source frameworks like PyTorch makes implementing such systems accessible.\\
+Deep learning has made tremendous strides in just a few years. Developments in image generation and transformation based on GANs (Generative Adversarial Networks) enable the creation of complex and highly realistic photographic imagery via computational techniques. Combining the development of very capable GPU computing systems with the growing number of free/open-source frameworks such as PyTorch means that building these capabilities is now easier than ever before.\\
 \textbf{4. Cultural Significance of Animation Styles:}\\
-Japanese anime (One Piece), Western animation (Disney), and Studio Ghibli films represent distinct visual languages with massive global followings. Creating tools that can transform photographs into these styles has significant appeal for fans and content creators worldwide.\\
+Japanese Animation (One Piece) is an entirely different visual vocabulary than Western Animation (Disney) and Studio Ghibli. Fans of both styles have a huge following around the world and this is why there is such a high demand to develop software that converts photographs into these two styles for fans and content developers around the globe.\\
 \textbf{5. Preservation and Appreciation of Artistic Heritage:}\\
-Van Gogh's unique artistic style, characterized by swirling brushstrokes and vibrant colors, represents a pinnacle of post-impressionist art. A neural network capable of applying this style to modern photographs serves both as an educational tool and a means of appreciating artistic heritage.\\
+Considered one of the greatest achievements in post-impressionistic art, Van Gogh's distinctive style features swirling brush strokes and bright colours. It can be used as an educational tool and a way to appreciate the artistic heritage of Van Gogh's work and the influence it has had on contemporary visual art through the application of this style by a neural network trained to apply Van Gogh's style to current day photographs.\\
 \textbf{6. Research and Educational Value:}\\
-Implementing a complete CycleGAN-based style transfer system provides valuable insights into deep learning architectures, loss function design, dataset creation, and the challenges of generative modeling. This project serves as a comprehensive case study in applied deep learning.
-
+Completing the process of building a full CycleGAN for style transfer was an instructive way to learn about the many areas of designing a Deep Learning Architecture, developing a Loss Function, creating a Dataset, and exploring the difficulties associated with generative models. Thus, this project serves as a thorough example of how to use Applied Deep Learning.
 \section{Problem Statement}
 The problem addressed by this project can be formally stated as follows:\\
-Given an input image $x$ from domain $X$ (real photographs), the goal is to learn a mapping function $G: X \rightarrow Y$ that transforms $x$ into an output image $G(x)$ in domain $Y$ (stylized images), such that:
+Taking an input image $x$ from domain $X$ (real photographs), the goal is to learn a mapping function $G: X \rightarrow Y$ that transforms $x$ into an output image $G(x)$ in domain $Y$ (stylized images), such that:
 \begin{enumerate}
     \item The output $G(x)$ exhibits the visual characteristics of the target artistic style
     \item The semantic content and structure of the input image are preserved
@@ -56,7 +53,7 @@ The specific style domains addressed are:
 \section{Objective of the Project}
 The primary objectives of this project are:\\
 \textbf{1. Develop Style-Specific Neural Style Transfer Models:}\\
-Design and implement four separate CycleGAN models, each trained to transform images into a specific artistic style. Each model should capture the unique visual characteristics of its target style while maintaining content fidelity.\\
+You will create four different models for transforming images through CycleGAN methods, each trained on one specific art stimulus. Each model must be capable of reproducing the specific characteristics associated with the targeted artistic styles while preserving the content of the original photograph.\\
 \textbf{2. Create Custom Datasets through Frame Extraction:}\\
 Develop an automated pipeline for extracting character frames from animation sources (One Piece episodes, Disney movies, Studio Ghibli films) using computer vision techniques including face detection and quality filtering.\\
 \textbf{3. Implement and Optimize Core Algorithms:}\\
@@ -180,13 +177,12 @@ The methodology employed in this project follows a systematic approach:\\
 \section{Organisation of the Report}
 This project report is organized into the following chapters:\\
 \textbf{Chapter 1: Introduction}\\
-Provides an overview of the project, including motivation, problem statement, objectives, scope, and methodology. This chapter establishes the context and significance of neural style transfer in the broader landscape of deep learning applications.\\
-
+An overview of the project is provided, including motivation, problem statement, project objectives, scope and methodology. This chapter outlines the general context and importance of neural style transfer as part of the larger field of deep learning.\\
 \textbf{Chapter 2: Literature Survey}\\
-Reviews the existing research in neural style transfer, generative adversarial networks, and image-to-image translation. This chapter discusses the foundational algorithms including the original NST by Gatys et al., various GAN architectures, and the evolution leading to CycleGAN. A detailed analysis of six key algorithms and their improvements is presented.\\
+An overview of the project is provided, including motivation, problem statement, project objectives, scope and methodology. This chapter outlines the general context and importance of neural style transfer as part of the larger field of deep learning.\\
 \newpage
 \textbf{Chapter 3: System Overview}\\
-Describes the overall system architecture, including the style transfer pipeline, dataset creation methodology, and the four style models. This chapter provides a high-level understanding of how different components interact.\\
+The descriptions of the overall system architecture will include the styles transfer pipeline, methodology for creating the data set and the four styles used. This chapter presents an overview of the relationships between the various components of the system at a higher level.\\
 \textbf{Chapter 4: System Architecture and High-Level Design}\\
 Presents the detailed architecture of the CycleGAN system, including generator and discriminator networks, loss function formulations, and training procedures. UML diagrams, flowcharts, and architectural diagrams illustrate the design.\\
 \textbf{Chapter 5: Software Architecture and Low-Level Design}\\
