--- a/literature_review.tex
+++ b/literature_review.tex
@@ -12,7 +12,7 @@ A new approach for performing arbitrary style-transfer via neural networks has b
 \textbf{In paper \cite{bib:li2017}, Universal Style Transfer via Feature Transforms:}
 To perform universal feed-forward style transfer without requiring any training specifically for the styles used in feed-forward style transfer, Li et al. designed their system using VGG as an encoder and cascaded decoders along with white and color transforms (WCTs) applied in the feature space which matches the covariance of the content features with that of the style image. Through a multi-level pipeline, the WCT is applied in the model, moving progressively from coarse layers to fine layers. The final product retains the global structure and detailed texture information from both the coarse and fine layers. Because all models are trained only for reconstruction on the decoders, this allows the method to be applied to new styles previously unseen with reasonable quality and efficiency. Finally, the authors bridge Gram-matrix optimization with feed-forward networks through a matching of explicit feature covariances.\\
 \textbf{In paper \cite{bib:ghiasi2017}, Exploring the Structure of a Real-Time, Arbitrary Stylization Network:}
-The authors & Ghiasi et Al. have extended the fast arbitrary style transfer to work by developing a network that predicts the style of an image based upon the affine parameterisation of the conditional instance normalisation layer(s) in a style transfer network. They trained their model with around 80,000 paintings and thousands of different textures. It is capable of real-time style transfers between styles not previously seen. The style embeddings learned during training allow for smooth transition between different styles and speed the performance of style transfer networks. This study has shown that the ability to predict normalisation parameters may allow those feed-forward networks to perform efficiently as conditional networks for arbitrary input styles.\\
+The authors Ghiasi et Al. have extended the fast arbitrary style transfer to work by developing a network that predicts the style of an image based upon the affine parameterisation of the conditional instance normalisation layer(s) in a style transfer network. They trained their model with around 80,000 paintings and thousands of different textures. It is capable of real-time style transfers between styles not previously seen. The style embeddings learned during training allow for smooth transition between different styles and speed the performance of style transfer networks. This study has shown that the ability to predict normalisation parameters may allow those feed-forward networks to perform efficiently as conditional networks for arbitrary input styles.\\
 \textbf{In paper \cite{bib:luan2017}, Deep Photo Style Transfer:}
 Unlike Gatys et al. (2015), the authors of this work focus on transferring visual styles between photographic images instead of painting images. They create an additional loss in their neural network models from the Gatys et al. (2015) work. This added loss incorporates the Matting Laplacian method for photorealism to restrict the amount of local colour adjustments allowed in their datasets. They use semantic segmentation masks to limit the regions being transferred to match the original. The authors show how effective their techniques are through their ability to produce high-quality results from multiple different types of photographic scenes.\\
 \newpage
