--- a/appendix.tex
+++ b/appendix.tex
@@ -10,7 +10,6 @@
 
 \begin{table}[H]
 \centering
-\caption{Project Milestone Schedule}
 \begin{tabular}{|l|l|l|}
 \hline
 \textbf{Phase} & \textbf{Activity} & \textbf{Duration} \\ \hline
@@ -21,13 +20,13 @@ Phase 4 & Model Training \& Optimization & 4 weeks \\ \hline
 Phase 5 & Testing, Evaluation \& Documentation & 2 weeks \\ \hline
 \multicolumn{2}{|l|}{\textbf{Total Duration}} & \textbf{16 weeks} \\ \hline
 \end{tabular}
+\caption{Project Milestone Schedule}
 \end{table}
 
 \section{Budget Estimation}
 
 \begin{table}[H]
 \centering
-\caption{Project Budget Estimation}
 \begin{tabular}{|l|l|r|}
 \hline
 \textbf{Category} & \textbf{Item} & \textbf{Cost (INR)} \\ \hline
@@ -40,6 +39,7 @@ Phase 5 & Testing, Evaluation \& Documentation & 2 weeks \\ \hline
  & Contingency & 1,500 \\ \hline
 \multicolumn{2}{|l|}{\textbf{Total Estimated Cost (4 months)}} & \textbf{9,000} \\ \hline
 \end{tabular}
+\caption{Project Budget Estimation}
 \end{table}
 
 \chapter{Sustainable Development Goals (SDGs) Addressed}
@@ -111,7 +111,6 @@ Detailed dataset information is provided in Chapter 3 (System Overview). The sum
 
 \begin{table}[H]
 \centering
-\caption{Complete Dataset Statistics}
 \begin{tabular}{|l|c|c|c|l|}
 \hline
 \textbf{Style} & \textbf{Domain X} & \textbf{Domain Y} & \textbf{Total} & \textbf{Source} \\ \hline
@@ -123,6 +122,7 @@ Human Faces & 3,000+ & 2,000+ & 5,000+ & Kaggle \\ \hline
 Landscape Images & 3,000+ & 2,000+ & 5,000+ & Kaggle \\ \hline
 \textbf{Total} & \textbf{11,500+} & \textbf{6,900+} & \textbf{18,400+} & -- \\ \hline
 \end{tabular}
+\caption{Complete Dataset Statistics}
 \end{table}
 
 All images are preprocessed to 256$\times$256 pixels in RGB format with normalization to [-1, 1] range.
@@ -135,7 +135,6 @@ The source code is organized in a modular structure to facilitate understanding,
 
 \begin{table}[H]
 \centering
-\caption{Project Directory Structure}
 \begin{tabular}{|l|p{9cm}|}
 \hline
 \textbf{Directory/File} & \textbf{Description} \\ \hline
@@ -154,8 +153,9 @@ The source code is organized in a modular structure to facilitate understanding,
 \texttt{data/} & Training datasets organized by style \\ \hline
 \texttt{requirements.txt} & Python package dependencies \\ \hline
 \end{tabular}
+\caption{Project Directory Structure}
 \end{table}
-
+\newpage
 \section{Installation Guide}
 
 \subsection{Installation Steps}
@@ -163,7 +163,7 @@ The source code is organized in a modular structure to facilitate understanding,
 \begin{enumerate}
     \item \textbf{Clone Repository:}
 \begin{lstlisting}[language=bash]
-git clone https://github.com/user/cyclegan-style-transfer.git
+git clone https://github.com/Ashay-Amal/cyclegan-style-transfer.git
 cd cyclegan-style-transfer
 \end{lstlisting}
 
