--- a/main_report.tex
+++ b/main_report.tex
@@ -73,7 +73,7 @@
 \titlespacing*{\chapter}{0pt}{0pt}{0pt}
 \pagestyle{fancy}
 \cfoot{}
-\lhead{{\footnotesize AI-Based Neural Style Transfer using CycleGAN}}
+\lhead{{\footnotesize Adaptive and Attentive Neural Style Transfer for Digital Art}}
 \lfoot{Dept.of CSE, S.I.T.,Tumakuru-03}
 \rfoot{\thepage}
 \rhead{2025-26}
