--- a/CourseOutcomes.tex
+++ b/CourseOutcomes.tex
@@ -30,17 +30,18 @@ CO11: To perform in the team, contribute to the team and mentor/lead the team
 %PO9 Individual and Team work (3)\\
 \newpage
 \begin{table}[ht]
+\caption*{\textbf{CO-PO Mapping}}
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|}
 \hline
  & PO1 & PO2 & PO3 & PO4 & PO5 & PO6 & PO7 & PO8 & PO9 & PO10 & PO11 &  PSO1 & PSO2 &PSO3 \\ \hline
 CO-1 &  &  &  &  &  &  &  &  &  &  &  3 & \* &  \* &  \ \\ \hline
 CO-2 &  & 3 &  &  &  &  &  &  &  &  &    &  &  &  \\ \hline
-CO-3 &  &  &  &  &  &  &  &  &  & 3 &   &  &  &  \\ \hline
-CO-4 &  &  &  &  &  & 3 &  &  &  &  &    &  &  &  \\ \hline
-CO-5 & 3 & 3 &  &  &  &  &  &  &  & &   &  &  &  \\ \hline
-CO-6 &  &  &  &  & 3 &  &  &  &  &  &  3  &  &  &  \\ \hline
-CO-7 &  &  & 3 & 3 &  &  &  &  &  &  &    & &  &  \\ \hline
+CO-3 &  &  &  &  &  &  &  &  &  & 3 &   &  & 3 &  \\ \hline
+CO-4 &  &  &  &  &  & 3 &  &  &  &  &    &  & 3 &  \\ \hline
+CO-5 & 3 & 3 &  &  &  &  &  &  &  & &   & 3 & 3 &  \\ \hline
+CO-6 &  &  &  &  & 3 &  &  &  &  &  &  3  &  & 3 &  \\ \hline
+CO-7 &  &  & 3 & 3 &  &  &  &  &  &  &    & 3 & 3 & 3 \\ \hline
 CO-8 &  &  &  &  &  &  &  &  & 3 &  &    &  & &  \\ \hline
 CO-9 &  &  &  &  &  &  &  &  & 3 &  &    &  & &  \\ \hline
 CO-10 &  &  &  &  &  &  & 3 &  &  &  &    &  &  &  \\ \hline
@@ -49,7 +50,6 @@ CO-11 &  &  &  &  &  &  &  & 3 &  &  &   &  &  &  \\ \hline
 Average & 3 & 3 & 3 & 3 & 3 & 3 & 3 & 3 & 3 & 3 & 3  &  & &\\ \hline
 \end{tabular}%
 }
-\caption*{\textbf{CO-PO Mapping}}
 \end{table}
 $\*$ Attainment level: \\ 1: Slight (low) \\2: Moderate (medium)	\\3: Substantial (high)
 \\ \\POs: \\ PO1: Engineering knowledge,\\ PO2: Problem analysis,\\ PO3:Design of solutions, \\PO4:Conduct investigations of complex problems,
