--- a/appendix.tex
+++ b/appendix.tex
@@ -3,7 +3,7 @@
 \section{Project Timeline}
 \begin{figure}[h]
 \centering
-\includegraphics[width=\textwidth,height=1\textwidth]{timeline.png}
+\includegraphics[height=0.7\textwidth,angle=-90]{timeline.png}
 \caption{The Project Timeline.}
 \label{fig:timeline}
 \end{figure} 
@@ -13,12 +13,12 @@
 \begin{tabular}{|l|l|l|}
 \hline
 \textbf{Phase} & \textbf{Activity} & \textbf{Duration} \\ \hline
-Phase 1 & Literature Review \& Research & 2 weeks \\ \hline
-Phase 2 & Dataset Collection \& Preparation & 3 weeks \\ \hline
-Phase 3 & Model Architecture Implementation & 5 weeks \\ \hline
-Phase 4 & Model Training \& Optimization & 4 weeks \\ \hline
-Phase 5 & Testing, Evaluation \& Documentation & 2 weeks \\ \hline
-\multicolumn{2}{|l|}{\textbf{Total Duration}} & \textbf{16 weeks} \\ \hline
+Phase 1 & Literature Review \& Research & 4 weeks \\ \hline
+Phase 2 & Dataset Collection \& Preparation & 6 weeks \\ \hline
+Phase 3 & Model Architecture Implementation & 10 weeks \\ \hline
+Phase 4 & Model Training \& Optimization & 8 weeks \\ \hline
+Phase 5 & Testing, Evaluation \& Documentation & 4 weeks \\ \hline
+\multicolumn{2}{|l|}{\textbf{Total Duration}} & \textbf{32 weeks} \\ \hline
 \end{tabular}
 \caption{Project Milestone Schedule}
 \end{table}
@@ -47,23 +47,23 @@ Phase 5 & Testing, Evaluation \& Documentation & 2 weeks \\ \hline
 \begin{longtable}{|p{8cm}|c|}
 \hline
 \textbf{SDG} & \textbf{Level} \\ \hline
-No Poverty & 1 \\ \hline
-Zero Hunger & 1 \\ \hline
-Good Health and Well-being & 1 \\ \hline
+No Poverty & - \\ \hline
+Zero Hunger & - \\ \hline
+Good Health and Well-being & -\\ \hline
 Quality Education & 3 \\ \hline
-Gender Equality & 2 \\ \hline
-Clean Water and Sanitation & 1 \\ \hline
-Affordable and Clean Energy & 1 \\ \hline
+Gender Equality & - \\ \hline
+Clean Water and Sanitation & - \\ \hline
+Affordable and Clean Energy & - \\ \hline
 Decent Work and Economic Growth & 2 \\ \hline
 Industry, Innovation and Infrastructure & 3 \\ \hline
 Reduced Inequalities & 2 \\ \hline
-Sustainable Cities and Communities & 2 \\ \hline
-Responsible Consumption and Production & 2 \\ \hline
-Climate Action & 1 \\ \hline
-Life Below Water & 1 \\ \hline
-Life on Land & 1 \\ \hline
-Peace, Justice and Strong Institutions & 1 \\ \hline
-Partnerships for the Goals & 2 \\ \hline
+Sustainable Cities and Communities & - \\ \hline
+Responsible Consumption and Production & - \\ \hline
+Climate Action & - \\ \hline
+Life Below Water & - \\ \hline
+Life on Land & - \\ \hline
+Peace, Justice and Strong Institutions & - \\ \hline
+Partnerships for the Goals & - \\ \hline
 \end{longtable}
 \textbf{Levels:} Poor = 1, Good = 2, Excellent = 3
 
